--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 yarl == 1.9.2
-Python == 3.11
-Pandas == 1.3.0
-Numpy == 1.16.5
+pandas == 1.5.1
+numpy == 1.16.5
 requests == 2.26
 lxml == 4.9.1
 appdirs == 1.4.4
@@ -10,35 +9,35 @@ frozendict == 2.3.4
 beautifulsoup4 == 4.11.1
 html5lib == 1.1
 cryptography == 3.3.2
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1665754496418/work
-aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1666878595458/work
-aiosignal @ file:///home/conda/feedstock_root/build_artifacts/aiosignal_1636093929600/work
+frozenlist == 1.0.0
+absl-py == 1.4.0
+aiohttp ==3.8.4
+aiosignal == 1.3.1
 alembic==1.8.1
 amqp==5.1.1
 anyio==3.6.2
 apispec==3.3.2
-appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
+appdirs ==1.4.4
 argcomplete==2.0.0
 asn1crypto==1.5.1
-astunparse @ file:///home/conda/feedstock_root/build_artifacts/astunparse_1610696312422/work
-async-timeout @ file:///home/conda/feedstock_root/build_artifacts/async-timeout_1640026696943/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1659291887007/work
+astunparse ==1.6.3
+async-timeout ==4.0.2
+attrs ==23.1.0
 Babel==2.11.0
-beautifulsoup4 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_croot-cdiouih5/beautifulsoup4_1650462164803/work
 billiard==3.6.4.0
-blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1664823096650/work
+blinker == 1.6.2
 boto3==1.26.31
 botocore==1.29.31
-brotlipy @ file:///Users/runner/miniforge3/conda-bld/brotlipy_1666764961872/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
+brotlipy ==0.7.0
+cached-property ==1.5.2
 cachelib==0.9.0
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1660055382950/work
+cachetools 5.3.1
 cattrs==22.2.0
 celery==5.2.7
 certifi==2023.5.7
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1666754777420/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1661170624537/work
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1666798198223/work
+cffi ==1.15.0
+charset-normalizer ==3.1.0
+click ==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -48,12 +47,12 @@ colorlog==4.8.0
 commonmark==0.9.1
 ConfigUpdater==3.1.1
 connexion==2.14.1
-contourpy @ file:///Users/runner/miniforge3/conda-bld/contourpy_1673633784416/work
+contourpy ==1.0.7
 cron-descriptor==1.2.32
 croniter==1.3.8
 cryptography==36.0.2
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
-dash @ file:///home/conda/feedstock_root/build_artifacts/dash_1685560748070/work
+cycler ==0.11.0
+dash ==2.10.2
 decorator==5.1.1
 Deprecated==1.2.13
 dill==0.3.1.1
@@ -73,71 +72,66 @@ Flask-Login==0.6.2
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
-flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1620718971772/work
+flatbuffers ==23.5.26
 flower==1.2.0
-fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1683740642345/work
-frozendict @ file:///Users/runner/miniforge3/conda-bld/frozendict_1682808293868/work
-frozenlist @ file:///Users/runner/miniforge3/conda-bld/frozenlist_1666783602269/work
-gast @ file:///home/conda/feedstock_root/build_artifacts/gast_1596839682936/work
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1667303214487/work
-google-auth-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/google-auth-oauthlib_1630497468950/work
+fonttools ==4.39.4
+frozendict ==2.3.8
+frozenlist ==1.3.3
+gast ==0.5.4
+google-auth ==2.19.1
+google-auth-oauthlib ==1.0.0
 google-pasta==0.2.0
 graphviz==0.20.1
 greenlet==2.0.1
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpc-split_1666813417095/work
+grpcio ==1.54.2
 gunicorn==20.1.0
 h11==0.14.0
-h5py @ file:///Users/runner/miniforge3/conda-bld/h5py_1666831046201/work
-html5lib @ file:///home/conda/feedstock_root/build_artifacts/html5lib_1592930327044/work
+h5py ==3.8.0
+html5lib ==1.1
 httpcore==0.16.2
 httpx==0.23.1
 humanize==4.4.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1666781969417/work
+idna ==3.4
+importlib-metadata ==6.6.0
 inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
+joblib ==1.2.0
 jsonpath-ng==1.5.3
 jsonschema==4.17.3
-keras @ file:///home/conda/feedstock_root/build_artifacts/keras_1662254869273/work/keras-2.10.0-py2.py3-none-any.whl
-Keras-Preprocessing @ file:///home/conda/feedstock_root/build_artifacts/keras-preprocessing_1610713559828/work
-kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1666805932507/work
+kiwisolver ==1.4.4
 kombu==5.2.4
 lazy-object-proxy==1.8.0
 linkify-it-py==2.0.0
 lockfile==0.12.2
 lxml==4.9.2
 Mako==1.2.4
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1657921053229/work
+Markdown ==3.4.3
 markdown-it-py==2.1.0
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1666770248905/work
+MarkupSafe ==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 marshmallow-oneofschema==3.0.1
 marshmallow-sqlalchemy==0.26.1
-matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1678135628784/work
+matplotlib ==3.7.1
 mdit-py-plugins==0.3.1
 mdurl==0.1.2
-mpld3 @ file:///home/conda/feedstock_root/build_artifacts/mpld3_1670691928456/work
-multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1666830051701/work
-multitasking @ file:///home/conda/feedstock_root/build_artifacts/multitasking_1622493113162/work
+multidict ==6.0.4
+multitasking ==0.0.11
 munkres==1.1.4
 mypy-boto3-appflow==1.26.15
 mypy-boto3-rds==1.26.29
 mypy-boto3-redshift-data==1.26.30
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1666788470527/work
-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1666056362788/work
+oauthlib ==3.2.2
 openpyxl==3.0.10
-opt-einsum @ file:///home/conda/feedstock_root/build_artifacts/opt_einsum_1617859230218/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
-pandas==1.5.1
+opt-einsum ==3.3.0
+packaging ==23.1
 pathspec==0.9.0
 pendulum==2.1.2
-Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1666920704267/work
+Pillow ==9.5.0
 platformdirs==3.5.1
-plotly @ file:///opt/conda/envs/env/conda-bld/plotly_1680710161946/work/packages/python/plotly/dist/plotly-5.14.1.tar.gz
+plotly==5.14.1
 pluggy==1.0.0
 ply==3.11
 prison==0.2.1
@@ -147,38 +141,38 @@ protobuf==4.21.9
 psutil==5.9.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+pycparser ==2.21
 Pygments==2.13.0
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1666240235902/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1665350324128/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
-PyPDF2 @ file:///home/conda/feedstock_root/build_artifacts/pypdf2_1667024492624/work
+PyJWT ==2.7.0
+pyOpenSSL ==23.2.0
+pyparsing ==3.0.9
+PyPDF2 ==3.0.1
 pyrsistent==0.19.2
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
+PySocks ==1.7.1
 python-daemon==2.3.2
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dateutil ==2.8.2
 python-nvd3==0.15.0
 python-slugify==7.0.0
 pytz==2022.6
 pytzdata==2020.1
-pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1604248910016/work
+pyu2f ==0.1.5
 PyYAML==6.0
 redshift-connector==2.0.909
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
-requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1643557462909/work
+requests ==2.31.0
+requests-oauthlib ==1.3.1
 requests-toolbelt==0.10.1
 rfc3986==1.5.0
 rich==12.6.0
-rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1658328885051/work
+rsa ==4.9
 s3transfer==0.6.0
-scikit-learn @ file:///Users/builder/ci_310/scikit-learn_1642608976196/work
+scikit-learn ==1.2.2
 scipy==1.9.3
 scramp==1.4.4
-seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
+seaborn ==0.12.2
 setproctitle==1.3.2
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six ==1.16.0
 sniffio==1.3.0
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
+soupsieve ==2.4.1
 SQLAlchemy==1.4.44
 SQLAlchemy-JSONField==1.0.0
 sqlalchemy-redshift==0.8.12
@@ -186,23 +180,23 @@ SQLAlchemy-Utils==0.38.3
 sqlparse==0.4.3
 swagger-ui-bundle==0.0.9
 tabulate==0.9.0
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1677600641219/work
+tenacity ==8.2.2
 termcolor==2.1.1
 text-unidecode==1.3
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1684150243998/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1665144421445/work
+threadpoolctl ==3.1.0
+tornado ==6.3.2
+typing_extensions ==4.6.3
 uc-micro-py==1.0.1
 unicodecsv==0.14.1
-unicodedata2 @ file:///Users/runner/miniforge3/conda-bld/unicodedata2_1667239910854/work
+unicodedata2 ==15.0.0
 urllib3==1.26.13
 vine==5.0.0
 virtualenv==20.23.0
 watchtower==2.0.1
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1660053523487/work
+Werkzeug ==2.3.4
 wget==3.2
-wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1666806089387/work
+wrapt ==1.15.0
 WTForms==3.0.1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1666647772197/work
+zipp ==3.15.0
