--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ botocore==1.29.31
 brotlipy ==0.7.0
 cached-property ==1.5.2
 cachelib==0.9.0
-cachetools 5.3.1
+cachetools==5.3.1
 cattrs==22.2.0
 celery==5.2.7
 certifi==2023.5.7
